--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,9 @@
     "express": "^4.21.2",
     "groq-sdk": "^0.32.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.8.7",
     "multer": "^2.0.2",
-    "openai": "^5.23.1"
+    "openai": "^5.23.1",
+    "serverless-http": "^4.0.0"
   }
 }
